Remove underline transition in nav and fix spacing

--- a/src/app/components/navigation/_index.scss
+++ b/src/app/components/navigation/_index.scss
@@ -44,10 +44,13 @@
     font-size: 16px;
     line-height: 24px;
 
+    a {
+      padding-bottom: 3px;
+    }
+
     a:hover,
     &.selected a {
       border-bottom: 2px solid white;
-      transition: border-bottom .2s ease-in-out;
     }
   }
 
